@@ -1,311 +1,224 @@
-// Jenkinsfile
 pipeline {
     agent any
-    tools { jdk 'jdk-17' }
     options {
         buildDiscarder(logRotator(numToKeepStr: '5'))
-        timestamps()
     }
     environment {
-        ALL_SERVICES = "spring-petclinic-admin-server spring-petclinic-api-gateway spring-petclinic-config-server spring-petclinic-customers-service spring-petclinic-discovery-server spring-petclinic-genai-service spring-petclinic-vets-service spring-petclinic-visits-service"
+        WORKSPACE = "${env.WORKSPACE}"
+        // List of services without test folders       
         SERVICES_WITHOUT_TESTS = "spring-petclinic-admin-server spring-petclinic-genai-service"
-        DOCKERHUB_USERNAME = "nhatphuoc" // <--- *** REPLACE THIS ***
-        DOCKERHUB_CREDENTIALS_ID = "docker_hub_credential" // <--- *** Use the ID you created ***
-        TESTS_FAILED_FLAG = "false"
-        // Common Dockerfile path relative to workspace root
-        DOCKERFILE_PATH = "docker/Dockerfile"
+        // Full list of services
+        ALL_SERVICES = "spring-petclinic-admin-server spring-petclinic-api-gateway spring-petclinic-config-server spring-petclinic-customers-service spring-petclinic-discovery-server spring-petclinic-genai-service spring-petclinic-vets-service spring-petclinic-visits-service"
+        // Docker Hub credentials
+        DOCKER_HUB_CREDS = credentials('docker-hub-credentials')
     }
-
     stages {
-
-        // ============================================================
-        // Stage 1: Detect Branch and Changes
-        // ============================================================
         stage('Detect Branch and Changes') {
             steps {
                 script {
-                    echo "Pipeline started for Branch: ${env.BRANCH_NAME}"
-                    env.CHANGED_SERVICES = "" // Initialize list of services to process
-
+                    echo "Running pipeline for Branch: ${env.BRANCH_NAME}"
+                    
+                    // Check if this is the main branch
                     if (env.BRANCH_NAME == 'main') {
-                        echo "Running on 'main' branch. Processing ALL services."
+                        echo "This is the main branch - will build all services"
                         env.CHANGED_SERVICES = env.ALL_SERVICES
                     } else {
-                        echo "Running on feature branch '${env.BRANCH_NAME}'. Detecting changes..."
-                        def changedFilesOutput = ''
-                        try {
-                           sh 'git fetch origin main:refs/remotes/origin/main'
-                           changedFilesOutput = sh(script: "git diff --name-only origin/main...HEAD || git diff --name-only HEAD~1 HEAD || exit 0", returnStdout: true).trim()
-                        } catch (e) {
-                           echo "Warning: Could not compare against origin/main, falling back to HEAD~1 comparison. Error: ${e.message}"
-                           changedFilesOutput = sh(script: "git diff --name-only HEAD~1 HEAD || exit 0", returnStdout: true).trim()
-                        }
-
-                        if (changedFilesOutput.isEmpty()) {
-                            echo "No files found changed compared to origin/main or HEAD~1."
-                        } else {
-                           echo "Changed files detected:\n${changedFilesOutput}"
-                        }
-                        def changedFilesList = changedFilesOutput.split('\n').findAll { it }
-
+                        // For non-main branches, detect changes
+                        // Get changed files between current and previous commit
+                        def changedFiles = sh(script: "git diff --name-only HEAD~1 HEAD", returnStdout: true).trim()
+                        
+                        // Define service directories to monitor
                         def services = env.ALL_SERVICES.split(" ")
-                        def detectedServiceChanges = []
-
+                        
+                        // Identify which services have changes
+                        env.CHANGED_SERVICES = ""
                         for (service in services) {
-                            if (changedFilesList.any { file -> file.startsWith(service + "/") }) {
-                                detectedServiceChanges.add(service)
+                            if (changedFiles.contains(service)) {
+                                env.CHANGED_SERVICES = env.CHANGED_SERVICES + " " + service
                             }
                         }
-
-                        def commonFilesChanged = changedFilesList.any { file ->
-                            file == 'pom.xml' || file == 'Jenkinsfile' || file == 'docker-compose' ||
-                            file.startsWith('.mvn/') || file.startsWith('.github/') ||
-                            file == 'mvnw' || file == 'mvnw.cmd'
+                        // If no specific service changes detected, check for common changes
+                        if (env.CHANGED_SERVICES == "") {
+                            if (changedFiles.contains("pom.xml") || 
+                                changedFiles.contains(".github") || 
+                                changedFiles.contains("docker-compose") ||
+                                changedFiles.contains("Jenkinsfile")) {
+                                echo "Common files changed, will build all services"
+                                env.CHANGED_SERVICES = env.ALL_SERVICES
+                            } else {
+                                echo "No relevant changes detected"
+                            }
                         }
+                        
+                        // Store changed files for detailed reporting
+                        env.CHANGED_FILES = changedFiles
+                    }
+                    
+                    echo "Services to build: ${env.CHANGED_SERVICES}"
+                    
+                    // Get the latest commit ID for tagging Docker images
+                    env.COMMIT_ID = sh(script: "git rev-parse --short HEAD", returnStdout: true).trim()
+                    echo "Commit ID for Docker tags: ${env.COMMIT_ID}"
+                }
+                
+                publishChecks name: 'Detect Changes', status: 'COMPLETED', conclusion: 'SUCCESS', 
+                    summary: env.BRANCH_NAME == 'main' ? "Building all services on main branch" : "Changed files detected: ${env.CHANGED_FILES?.split('\n')?.size() ?: 0}",
+                    text: env.BRANCH_NAME == 'main' ? 
+                        """## Main Branch Build
+                        Building all services because this is the main branch.""" :
+                        """## Changed Files
+                        ```
+                        ${env.CHANGED_FILES ?: 'No changes detected'}
+                        ```
+                        
+                        ## Services to Build
+                        ```
+                        ${env.CHANGED_SERVICES ?: 'No services to build'}
+                        ```"""
+            }
+            post {
+                failure {
+                    publishChecks name: 'Detect Changes', status: 'COMPLETED', conclusion: 'FAILURE', 
+                        summary: 'Failed to detect changes'
+                }
+            }
+        }
+        
+        stage('Test Services') {
+            when {
+                expression { return env.CHANGED_SERVICES != "" }
+            }
+            steps {
+                publishChecks name: 'Test Services', status: 'IN_PROGRESS', 
+                    summary: 'Running tests for changed services'
+                script {
+                    def serviceList = env.CHANGED_SERVICES.trim().split(" ")
+                    def testDetails = [:]
+                    def testFailures = 0
+                    def testPasses = 0
+                    
 
-                        if (commonFilesChanged) {
-                            echo "Common file(s) changed. Processing ALL services."
-                            env.CHANGED_SERVICES = env.ALL_SERVICES
-                        } else if (!detectedServiceChanges.isEmpty()) {
-                            echo "Changes detected in specific services."
-                            env.CHANGED_SERVICES = detectedServiceChanges.join(" ")
+                    for (service in serviceList) {
+                        echo "Running tests for service: ${service}"
+                        echo "Testing service: ${service}"
+                        // Check if the service has tests
+                        if (!env.SERVICES_WITHOUT_TESTS.contains(service)) {
+                            try {
+                                def testOutput = sh(script: "./mvnw clean verify -pl ${service}", returnStdout: true)
+
+                                // def testOutput = sh(script: 'mvn clean test -Djdk.attach.allowAttachSelf=true', returnStdout: true)
+
+                                testDetails[service] = [
+                                    status: 'SUCCESS',
+                                    output: testOutput
+                                ]
+                                testPasses++
+                            } catch (Exception e) {
+                                echo "Warning: Tests failed for ${service}, but continuing pipeline"
+                                testDetails[service] = [
+                                    status: 'FAILURE',
+                                    error: e.getMessage()
+                                ]
+                                testFailures++
+                                currentBuild.result = 'UNSTABLE'
+                            } finally {
+                                // Publish test results regardless of test success/failure
+                                junit allowEmptyResults: true, testResults: '**/target/surefire-reports/*.xml'
+                            }
                         } else {
-                            echo "No relevant service or common file changes detected."
-                            env.CHANGED_SERVICES = ""
+                            echo "Skipping tests for ${service} as it does not have test folders"
+                            testDetails[service] = [
+                                status: 'SKIPPED',
+                                reason: 'No test folders'
+                            ]
                         }
-                    } // End script
+                    }
+                    if (testPasses == 0) {
+                        currentBuild.result = 'FAILURE'
+                    } else if (testFailures > 0) {
+                        currentBuild.result = 'UNSTABLE'
+                    } else {
+                        currentBuild.result = 'SUCCESS'
+                    } 
+                    echo "currentBuild.result: ${currentBuild.result}"
+                    echo "changeService: ${CHANGED_SERVICES}"
+                    
+                    // Store test details for report
+                    env.TEST_SUMMARY = "Tests passed: ${testPasses}, failed: ${testFailures}, skipped: ${serviceList.size() - testPasses - testFailures}"
+                    // Create detailed test report text
+                    def testReportText = "# Test Results Summary\n\n"
+                    testReportText += "| Service | Status | Details |\n"
+                    testReportText += "|---------|--------|--------|\n"
+                    
+                    for (service in serviceList) {
+                        def details = testDetails[service]
+                        def statusEmoji = details.status == 'SUCCESS' ? '✅' : details.status == 'SKIPPED' ? '⏭️' : '❌' 
+                        def detailText = details.status == 'SUCCESS' ? 'Tests passed' : 
+                                        details.status == 'SKIPPED' ? details.reason : 'Tests failed'
+                        testReportText += "| ${service} | ${statusEmoji} ${details.status} | ${detailText} |\n"
+                    }
+                    
+                    testReportText += "\n\n## JUnit Results\nSee Jenkins test results for detailed JUnit information.\n\n"
+                    testReportText += "## JaCoCo Coverage\nSee Jenkins coverage reports for aggregated code coverage information."
+                    
+                    env.TEST_REPORT = testReportText
+                }
+                publishChecks name: 'Test Services', status: 'COMPLETED', 
+                    conclusion: currentBuild.result,
+                    summary: env.TEST_SUMMARY,
+                    text: env.TEST_REPORT
+            }
+            post {
+                failure {
+                    publishChecks name: 'Test Services', status: 'COMPLETED', conclusion: 'FAILURE', 
+                        summary: 'Test execution failed'
+                }
+            }
+        }
 
-                    script { // Separate script block just for logging
-                        if (env.CHANGED_SERVICES?.trim()) {
-                            echo "Services to process in subsequent stages: ${env.CHANGED_SERVICES}"
-                        } else {
-                            echo "No services require processing. Subsequent stages will be skipped."
+
+        stage('Build and Push Docker Images') {
+            when {
+                expression { return env.CHANGED_SERVICES?.trim() }
+            }
+            steps {
+                script {
+                    // Login to Docker Hub using withCredentials for proper secret handling
+                    withCredentials([usernamePassword(credentialsId: 'docker-hub-credentials', 
+                                                    usernameVariable: 'DOCKER_USERNAME', 
+                                                    passwordVariable: 'DOCKER_PASSWORD')]) {
+                        sh "echo \$DOCKER_PASSWORD | docker login -u \$DOCKER_USERNAME --password-stdin"
+                        
+                        // Build each changed service
+                        def services = env.CHANGED_SERVICES.trim().split(" ")
+                        for (service in services) {
+                            echo "Building Docker image for ${service}"
+                            
+                            // Build the service and its Docker image
+                            sh "./mvnw clean install -PbuildDocker -pl ${service} -DskipTests=true"
+                            
+                            // Get image info (assuming the image is named the same as the service directory)
+                            def baseImageName = "\$DOCKER_USERNAME/${service}"
+                            
+                            // Tag the image with commit ID
+                            sh "docker tag ${baseImageName}:latest ${baseImageName}:${env.COMMIT_ID}"
+                            
+                            // Push both tags to Docker Hub
+                            echo "Pushing ${baseImageName}:${env.COMMIT_ID} to Docker Hub"
+                            // sh "docker push ${baseImageName}:latest"
+                            sh "docker push ${baseImageName}:${env.COMMIT_ID}"
                         }
                     }
                 }
             }
-        } // End Stage 1
-
-        // ============================================================
-        // Stage 2: Test Services
-        // ============================================================
-        stage('Test Services') {
-             when { expression { return env.CHANGED_SERVICES?.trim() } }
+            // ...post actions remain the same
+        }
+        stage('Clean') {
             steps {
-                script {
-                    def serviceList = env.CHANGED_SERVICES.trim().split(" ")
-                    def jacocoExecFiles = []
-                    def jacocoClassDirs = []
-                    def jacocoSrcDirs = []
-                    env.TESTS_FAILED_FLAG = "false"
-
-                    for (service in serviceList) {
-                        echo "--- Preparing to Test Service: ${service} ---"
-                        if (env.SERVICES_WITHOUT_TESTS.contains(service)) {
-                            echo "Skipping tests for ${service} (marked as having no tests)."
-                            continue
-                        }
-
-                        dir(service) {
-                            try {
-                                echo "Running 'mvn clean test' for ${service}..."
-                                sh 'mvn clean test'
-                                echo "Tests completed for ${service}."
-
-                                if (fileExists('target/jacoco.exec')) {
-                                    echo "Found jacoco.exec for ${service}. Adding to aggregation list."
-                                    jacocoExecFiles.add("${service}/target/jacoco.exec")
-                                    jacocoClassDirs.add("${service}/target/classes")
-                                    jacocoSrcDirs.add("${service}/src/main/java")
-                                } else {
-                                    echo "WARNING: jacoco.exec not found for ${service} after tests ran."
-                                }
-
-                            } catch (err) {
-                                echo "ERROR: Tests FAILED for ${service}. Marking build as UNSTABLE."
-                                env.TESTS_FAILED_FLAG = "true"
-                            } finally {
-                                echo "Publishing JUnit results for ${service}..."
-                                junit allowEmptyResults: true, testResults: '**/target/surefire-reports/*.xml'
-                            }
-                        }
-                    }
-
-                    if (!jacocoExecFiles.isEmpty()) {
-                        echo "--- Generating Aggregated JaCoCo Coverage Report ---"
-                        echo "Aggregating JaCoCo data from ${jacocoExecFiles.size()} service(s)."
-                        try {
-                            jacoco(
-                                execPattern: jacocoExecFiles.join(','),
-                                classPattern: jacocoClassDirs.join(','),
-                                sourcePattern: jacocoSrcDirs.join(','),
-                                inclusionPattern: '**/*.class',
-                                exclusionPattern: '**/test/**,**/model/**,**/domain/**,**/entity/**',
-                                skipCopyOfSrcFiles: true
-                            )
-                            echo "JaCoCo aggregated report generated successfully."
-                        } catch (err) {
-                            echo "ERROR: Failed to generate JaCoCo aggregated report: ${err.getMessage()}"
-                            currentBuild.result = 'UNSTABLE'
-                        }
-                    } else {
-                        echo "No JaCoCo execution data found to aggregate."
-                    }
-
-                    if (env.TESTS_FAILED_FLAG == "true") {
-                        echo "Setting build status to UNSTABLE due to test failures."
-                        currentBuild.result = 'UNSTABLE'
-                    } else {
-                        echo "All tests passed or were skipped."
-                    }
-
-                } // End script
-            } // End steps
-        } // End Stage 2
-
-
-        // ============================================================
-        // Stage 3: Build, Package & Push Docker Images (Correct Build Arg Value)
-        // ============================================================
-        stage('Build, Package & Push Docker Images') {
-            when {
-                expression { return env.CHANGED_SERVICES?.trim() && currentBuild.currentResult != 'FAILURE' }
+                echo 'Cleaning workspace and build artifacts...'
+                deleteDir() 
             }
-            steps {
-                script {
-                    if (!env.DOCKERHUB_USERNAME || env.DOCKERHUB_USERNAME == 'your-dockerhub-username') {
-                        error "FATAL: DOCKERHUB_USERNAME environment variable is not set or not replaced in Jenkinsfile."
-                    }
-                    if (!env.DOCKERHUB_CREDENTIALS_ID || env.DOCKERHUB_CREDENTIALS_ID == 'dockerhub-credentials') {
-                        error "FATAL: DOCKERHUB_CREDENTIALS_ID environment variable is not set or not replaced in Jenkinsfile."
-                    }
-                     if (!fileExists(env.DOCKERFILE_PATH)) {
-                         error "FATAL: Common Dockerfile not found at ${env.DOCKERFILE_PATH}"
-                    }
-
-                    def serviceList = env.CHANGED_SERVICES.trim().split(" ")
-                    def commitId = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
-                    if (!commitId) {
-                        error "FATAL: Could not retrieve Git commit ID."
-                    }
-                    echo "Using Commit ID for tagging: ${commitId}"
-
-                    def buildFailed = false // Track build/push failures in this stage
-
-                    withCredentials([usernamePassword(credentialsId: env.DOCKERHUB_CREDENTIALS_ID, usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
-                        try {
-                            echo "Attempting explicit Docker login..."
-                            sh 'echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin'
-                            echo "Explicit Docker login successful."
-                        } catch (e) {
-                            error "FATAL: Explicit Docker login failed. Check credentials and permissions. Error: ${e.message}"
-                        }
-                        
-                        for (service in serviceList) {
-                            echo "--- Processing Service: ${service} ---"
-                            def artifactNameArgValue = "" // Will hold the path *without* .jar suffix
-
-                            // 1. Package the service JAR (inside service directory)
-                            dir(service) {
-                                try {
-                                    echo "Running 'mvn clean package -DskipTests' for ${service}..."
-                                    sh 'mvn clean package -DskipTests'
-                                    echo "Maven package successful for ${service}."
-
-                                    // Find the JAR relative path
-                                    def jarFileFullPath = sh(script: 'find target -maxdepth 1 -name "*.jar" -print -quit', returnStdout: true).trim()
-                                    if (!jarFileFullPath) {
-                                        error "Could not find JAR file in target/ for ${service}."
-                                    }
-                                    // Construct path relative to workspace and remove suffix for the build arg
-                                    def jarFileRelativePath = "${service}/${jarFileFullPath}"
-                                    if (jarFileRelativePath.endsWith('.jar')) {
-                                      artifactNameArgValue = jarFileRelativePath.substring(0, jarFileRelativePath.length() - 4)
-                                    } else {
-                                      // Should not happen if find command works, but handle defensively
-                                      error("Could not remove .jar suffix from ${jarFileRelativePath}")
-                                    }
-                                    echo "JAR path relative to root: ${jarFileRelativePath}"
-                                    echo "ARTIFACT_NAME build-arg value: ${artifactNameArgValue}"
-
-                                } catch (err) {
-                                    echo "ERROR: Maven package FAILED for ${service}: ${err.getMessage()}"
-                                    buildFailed = true
-                                    if (currentBuild.currentResult != 'FAILURE') {
-                                        currentBuild.result = 'UNSTABLE'
-                                    }
-                                    continue // Skip Docker steps for this service if package failed
-                                }
-                            } // End dir(service)
-
-                            // 2. Build and Push Docker Image (from workspace root)
-                            if (artifactNameArgValue) { // Check if artifact path (without suffix) was set
-                                try {
-                                    def imageName = "${env.DOCKERHUB_USERNAME}/${service}"
-                                    def imageTag = commitId
-                                    echo "Building Docker image: ${imageName}:${imageTag} using ${env.DOCKERFILE_PATH}"
-
-                                    // Pass the path WITHOUT .jar as ARTIFACT_NAME
-                                    def dockerImage = docker.build("${imageName}:${imageTag}", "-f ${env.DOCKERFILE_PATH} --build-arg ARTIFACT_NAME=${artifactNameArgValue} .")
-
-                                    echo "Pushing Docker image: ${imageName}:${imageTag}"
-                                    dockerImage.push()
-
-                                    if (env.BRANCH_NAME == 'main') {
-                                        echo "Pushing additional tag 'latest' for main branch build: ${imageName}:latest"
-                                        dockerImage.push('latest')
-                                    } else if (env.BRANCH_NAME) {
-                                        def branchTag = env.BRANCH_NAME.replaceAll('/','-')
-                                        echo "Pushing additional tag for branch name: ${imageName}:${branchTag}"
-                                        dockerImage.push("${branchTag}")
-                                    }
-
-                                    echo "Docker build and push successful for ${service}."
-
-                                } catch (err) {
-                                    echo "ERROR: Docker build or push FAILED for ${service}: ${err.getMessage()}"
-                                    buildFailed = true
-                                    if (currentBuild.currentResult != 'FAILURE') {
-                                        currentBuild.result = 'UNSTABLE'
-                                    }
-                                }
-                            } // End if (artifactNameArgValue)
-                        } // End for loop
-                    } // End withCredentials
-
-                    // Final check for this stage
-                    if (buildFailed) {
-                        echo "One or more services failed during package or docker build/push."
-                        if (currentBuild.currentResult != 'FAILURE') {
-                           currentBuild.result = 'UNSTABLE'
-                        }
-                    } else {
-                        echo "All processed services completed package and docker build/push successfully."
-                    }
-
-                } // End script
-            } // End steps
-        } // End Stage 3 (Merged)
-
-    } // End stages
-
-    // ============================================================
-    // Post Actions
-    // ============================================================
-    post {
-        always {
-            echo "Pipeline finished with final status: ${currentBuild.currentResult}"
-            cleanWs()
         }
-        success {
-            echo "Build finished with status SUCCESS."
-        }
-        unstable {
-            echo "Build finished with status UNSTABLE. Check logs for test failures, build issues, or Docker push problems."
-        }
-        failure {
-            echo "Build FAILED. Check logs for critical errors."
-        }
-    } // End post
+    }
+}
 
-} // End pipeline
